# gitwrap

./: .gitignore  Cargo.toml  README.md
src/: batch_command.rs  command_executor.rs  error.rs  git_command.rs  git_commands.rs  lib.rs  option_arg.rs  optionarg.rs  tests.rs  wrap_command.rs
src/add/: add_options.rs  mod.rs  options.rs
src/branch/: branch_options.rs  mod.rs  options.rs
src/checkout/: checkout_options.rs  mod.rs  options.rs
src/clean/: mod.rs  options.rs
src/clone/: clone_options.rs  custom.rs  mod.rs  options.rs
src/commit/: commit_options.rs  mod.rs  options.rs
src/config/: config_options.rs  custom.rs  mod.rs  options.rs
src/fetch/: fetch_options.rs  mod.rs  options.rs
src/generator/: descriptions.json  gen.rs  options.rs  template.rs
src/generic/: custom.rs  mod.rs  options.rs
src/init/: init_options.rs  mod.rs  options.rs
src/ls_files/: ls_files_options.rs  mod.rs  options.rs
src/merge/: merge_options.rs  mod.rs  options.rs
src/notes/: mod.rs  notes_options.rs  options.rs
src/options/: mod.rs
src/options/add/: add_options.rs  mod.rs
src/options/branch/: branch_options.rs
src/options/clone/: clone_custom.rs  mod.rs
src/options/init/: mod.rs
src/pull/: mod.rs  options.rs  pull_options.rs
src/push/: mod.rs  options.rs  push_options.rs
src/rebase/: mod.rs  options.rs  rebase_options.rs
src/reset/: mod.rs  options.rs  reset_options.rs
src/rev_parse/: mod.rs  options.rs
src/revparse/: mod.rs  revparse_options.rs
src/status/: mod.rs  options.rs  status_options.rs
src/tag/: mod.rs  options.rs  tag_options.rs
(+16 files in other folders)
