[package]
name = "gitwrap"
description = "GitWrap is a simple wrapper around `git` command"
authors = ["Juan Antonio Piñero"]
version = "0.7.0"
edition = "2021"
repository = "https://github.com/japiber/gitwrap"
license = "Apache-2.0"
keywords = ["gitops", "git"]
categories = ["command-line-interface", "development-tools"]
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"

[badges]
maintenance = { status = "experimental" }

[lib]
name = "gitwrap"
path = "src/lib.rs"

[[bin]]
name = "gitwrap"
path = "src/generator/gen.rs"

[dependencies]
upon = "0.8"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
regex = "1.11"
rand = "0.9.0-beta.1"

